--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   
   <div id="links">
   
-    <a class="link-button" href="link1.html">Link 1</a><br>
+    <a class="link-button" onclick="changePage('schmock.html')">Link 1</button><br>
     <a class="link-button" href="link2.html">Link 2</a><br>
     <a class="link-button" href="link3.html">Link 3</a><br>
     <!-- Add more link buttons here -->
@@ -156,5 +156,11 @@
       <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
     </svg>
   </div>
+  
+  <script>
+    function changePage(page) {
+      window.location.href = page; // Change the current page to the specified page
+    }
+  </script>
 </body>
 </html>
