--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   
   <div id="links">
   
-    <a class="link-button" onclick="changePage('schmock.html')">Link 1</button><br>
+    <a class="link-button" href="schmock.html">Link 1</button><br>
     <!-- Add more link buttons here -->
   </div>
   <div class="custom-shape-divider-bottom-1685212929">
@@ -155,10 +155,5 @@
     </svg>
   </div>
   
-  <script>
-    function changePage(page) {
-      window.location.href = page; // Change the current page to the specified page
-    }
-  </script>
 </body>
 </html>
