--- a/schmock.html
+++ b/schmock.html
@@ -138,15 +138,15 @@
   <div id="banner">
     <div id="profile" class="profile-info">
       <img src="https://i.scdn.co/image/ab67616d00001e02d76957398e3f58291fa610fb" alt="Profile Image">
-      <h1>Schmock!</h1>
+      <h1>Schmock</h1>
     </div>
   </div>
   
   <div id="links">
   
-    <a class="link-button" href="link1.html">Link 1</a><br>
-    <a class="link-button" href="link2.html">Link 2</a><br>
-    <a class="link-button" href="link3.html">Link 3</a><br>
+    <a class="link-button" href="https://open.spotify.com/artist/00UL27CiQhemd3BmIK8cDE">Spotify</a><br>
+    <a class="link-button" href="link2.html">Instagram</a><br>
+    <a class="link-button" href="link3.html">YouTube</a><br>
     <!-- Add more link buttons here -->
   </div>
   <div class="custom-shape-divider-bottom-1685212929">
