--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('/w3images/forestbridge.jpg');
+  background: rgb(0,0,0);
+  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(46,46,46,1) 100%, rgba(74,74,74,1) 100%);
   min-height: 100%;
   background-position: center;
   background-size: cover;
