--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ body, html {height: 100%}
   background-position: center;
   background-size: cover;
 }
+  body {
+  background: rgb(0,0,0);
+  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(46,46,46,1) 100%, rgba(74,74,74,1) 100%);
+  }
 </style>
 </head>
 <body>
@@ -31,9 +35,6 @@ body, html {height: 100%}
     <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center">35 days left</p>
-  </div>
-  <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
   </div>
 </div>
 
