--- a/schmock.html
+++ b/schmock.html
@@ -138,7 +138,7 @@
 </div>
   <div id="banner">
     <div id="profile" class="profile-info">
-      <img src="https://i.scdn.co/image/ab67616d00001e02d76957398e3f58291fa610fb" alt="Profile Image">
+      <img src="https://media.discordapp.net/attachments/916425334021296139/1112172965530964050/IMG-20230528-WA0000.jpg?width=452&height=452" alt="Profile Image">
       <h1>Schmock</h1>
     </div>
   </div>
@@ -146,8 +146,8 @@
   <div id="links">
   
     <a class="link-button" href="https://open.spotify.com/artist/00UL27CiQhemd3BmIK8cDE">Spotify</a><br>
-    <a class="link-button" href="link2.html">Instagram</a><br>
-    <a class="link-button" href="link3.html">YouTube</a><br>
+    <a class="link-button" href="https://www.instagram.com/schmendrickkk/">Instagram</a><br>
+    <a class="link-button" href="https://www.youtube.com/@schmock3183">YouTube</a><br>
     <!-- Add more link buttons here -->
   </div>
   <div class="custom-shape-divider-bottom-1685212929">
