--- a/schmock.html
+++ b/schmock.html
@@ -122,8 +122,8 @@
     background-size: 400%;
     z-index: -1;
     filter: blur(5px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
+    width: 200px;
+    height: 50px;
     animation: glowing 20s linear infinite;
     opacity: 0;
     transition: opacity .3s ease-in-out;
