--- a/schmock.html
+++ b/schmock.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Schmock</title>
-  <link rel="icon" href="https://media.discordapp.net/attachments/916425334021296139/1112172965530964050/IMG-20230528-WA0000.jpg?width=452&height=452" type="image/x-icon">
+  <link rel="icon" href="https://media.discordapp.net/attachments/916425334021296139/1112383557457944646/Picsart_23-05-28_16-14-53-744.png?width=453&height=452" type="image/x-icon">
 
   <style>
     body {
