--- a/schmock.html
+++ b/schmock.html
@@ -60,6 +60,7 @@
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
   display: flex; /* Use flexbox for layout */
   align-items: center; /* Center align items vertically */
+      width: 220px;
 }
 
 .button-icon {
