--- a/sxdrxq.html
+++ b/sxdrxq.html
@@ -17,7 +17,7 @@
       position: relative;
     }
     #banner {
-      background-image: url("https://i.scdn.co/image/ab67618600001016b1851d17eb1cc658589062d5");
+      background-image: url("https://giffiles.alphacoders.com/729/72989.gif");
       background-color: #222;
       padding: 20px;
       text-align: center;
