--- a/sxdrxq.html
+++ b/sxdrxq.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Schmock</title>
+  <title>SXDRXQ</title>
   <link rel="icon" href="https://media.discordapp.net/attachments/1112688216882040966/1112704692326240256/upscaled_5.jpg?width=452&height=452" type="image/x-icon">
 
   <style>
@@ -17,7 +17,7 @@
       position: relative;
     }
     #banner {
-      background-image: url("https://giffiles.alphacoders.com/729/72989.gif");
+      background-image: url(https://media.discordapp.net/attachments/916425334021296139/1112710157751828512/banner-art-anime-speed-grapher-886729.png");
       background-color: #222;
       padding: 20px;
       text-align: center;
