--- a/sxdrxq.html
+++ b/sxdrxq.html
@@ -17,7 +17,7 @@
       position: relative;
     }
     #banner {
-      background-image: url(https://media.discordapp.net/attachments/916425334021296139/1112710157751828512/banner-art-anime-speed-grapher-886729.png");
+      background-image: url("https://media.discordapp.net/attachments/916425334021296139/1112710157751828512/banner-art-anime-speed-grapher-886729.png");
       background-color: #222;
       padding: 20px;
       text-align: center;
