--- a/sxdrxq.html
+++ b/sxdrxq.html
@@ -17,7 +17,7 @@
       position: relative;
     }
     #banner {
-      background-image: url("https://media.discordapp.net/attachments/916425334021296139/1112710833819107468/Picsart_23-05-29_13-55-26-968.jpg?width=983&height=208");
+      background-image: url("https://media.discordapp.net/attachments/916425334021296139/1112712326836138085/Picsart_23-05-29_14-01-13-563.jpg");
       background-color: #222;
       padding: 20px;
       text-align: center;
