--- a/sxdrxq.html
+++ b/sxdrxq.html
@@ -34,10 +34,12 @@ background: linear-gradient(0deg, rgba(98,61,98,1) 0%, rgba(255,250,255,1) 100%,
       border-radius: 50%;
       margin-right: 10px;
     }
-    #profile h1 {
-      font-size: 24px;
-      margin: 0;
-    }
+   #profile h1 {
+  font-size: 24px;
+  margin: 0;
+  text-shadow: 0px 0px 4px black;
+}
+
     .profile-info {
       display: flex;
       align-items: center;
