--- a/sxdrxq.html
+++ b/sxdrxq.html
@@ -63,6 +63,7 @@ background: linear-gradient(0deg, rgba(98,61,98,1) 0%, rgba(255,250,255,1) 100%,
   display: flex; /* Use flexbox for layout */
   align-items: center; /* Center align items vertically */
       width: 220px;
+      text-shadow: 0px 0px 4px black;
 }
 
 .button-icon {
