--- a/shop/schmock.html
+++ b/shop/schmock.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <style>
+        body {
+  background: rgb(0,0,0);
+  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(46,46,46,1) 100%, rgba(74,74,74,1) 100%);
+  }
         .cube-container {
             display: flex;
             flex-wrap: wrap;
