--- a/shop/schmock.html
+++ b/shop/schmock.html
@@ -82,7 +82,7 @@
             <div class="cube-inner">
                 <div class="cube-front">
                     <div class="cube-content">
-                        <img src="product1.jpg" alt="Product 1">
+                        <img src="https://freepngimg.com/thumb/tshirt/36634-6-blank-white-t-shirt-template-thumb.png" alt="Product 1">
                         <h3>Product 1</h3>
                     </div>
                 </div>
