--- a/shop/schmock.html
+++ b/shop/schmock.html
@@ -63,6 +63,20 @@
                         <h3>Product 1</h3>
                     </div>
         </div>
+        
+        <div class="cube">
+                    <div class="cube-content">
+                        <img src="https://freepngimg.com/thumb/tshirt/36634-6-blank-white-t-shirt-template-thumb.png" alt="Product 1">
+                        <h3>Product 2</h3>
+                    </div>
+        </div>
+        
+        <div class="cube">
+                    <div class="cube-content">
+                        <img src="https://freepngimg.com/thumb/tshirt/36634-6-blank-white-t-shirt-template-thumb.png" alt="Product 1">
+                        <h3>Product 3</h3>
+                    </div>
+        </div>
     </div>
 </body>
 </html>
