--- a/latest.html
+++ b/latest.html
@@ -13,6 +13,6 @@
   <h1>Latest Song</h1>
   <div id="song-container"></div>
 
-  <script src="script.js"></script>
+  <script src="script2.js"></script>
 </body>
 </html>
