--- a/404.html
+++ b/404.html
@@ -18,6 +18,6 @@
 </head>
 <body>
   <h1>404 - Page Not Found</h1>
-  <p>The page you are looking for does not exist.</p>
+  <p>Did you make a typo?</p>
 </body>
 </html>
