--- a/404.html
+++ b/404.html
@@ -6,10 +6,9 @@
   <style>
     /* Add your custom styles for the error page */
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f1f1f1;
-      padding: 20px;
-    }
+  background: rgb(0,0,0);
+  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(46,46,46,1) 100%, rgba(74,74,74,1) 100%);
+  }
 
     h1 {
       color: #555;
