--- a/404.html
+++ b/404.html
@@ -6,12 +6,23 @@
   <style>
     /* Add your custom styles for the error page */
     body {
-  background: rgb(0,0,0);
-  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(46,46,46,1) 100%, rgba(74,74,74,1) 100%);
-  }
+      background: rgb(0,0,0);
+      background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(46,46,46,1) 100%, rgba(74,74,74,1) 100%);
+      color: #fff;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      position: relative;
+    }
 
     h1 {
-      color: #555;
+  margin: 0;
+  text-shadow: 0px 0px 4px black;
+    }
+    p {
+      margin: 0;
+  text-shadow: 0px 0px 4px black;
     }
   </style>
 </head>
