--- a/404.html
+++ b/404.html
@@ -14,6 +14,8 @@
       padding: 0;
       height: 100vh;
       position: relative;
+      display: flex;
+      align-items: center;
     }
 
     h1 {
