--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
       padding: 0;
       height: 100vh;
       position: relative;
-      display: flex;
+      display: inline-block;
       align-items: center;
     }
 
