--- a/404.html
+++ b/404.html
@@ -14,17 +14,21 @@
       padding: 0;
       height: 100vh;
       position: relative;
-      display: inline-block;
-      align-items: center;
     }
 
     h1 {
   margin: 0;
   text-shadow: 0px 0px 4px black;
+      
+      display: flex;
+      align-items: center;
     }
     p {
       margin: 0;
   text-shadow: 0px 0px 4px black;
+      
+      display: flex;
+      align-items: center;
     }
   </style>
 </head>
