--- a/404.html
+++ b/404.html
@@ -26,10 +26,15 @@
   text-shadow: 0px 0px 4px black;
       align-items: center;
     }
+    div {
+      align-items: center;
+    }
   </style>
 </head>
 <body>
+  <div>
   <h1>404 - Page Not Found</h1>
   <p>Did you make a typo?</p>
+  </div>
 </body>
 </html>
