--- a/404.html
+++ b/404.html
@@ -1,7 +1,87 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>404 - Pa<!DOCTYPE html>
+<html>
+<head>
   <title>404 - Page Not Found</title>
+  <!-- Add custom CSS styles here -->
+  <style>
+    /* Add your custom styles for the error page */
+    body {
+      background: rgb(0,0,0);
+      background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(46,46,46,1) 100%, rgba(74,74,74,1) 100%);
+      color: #fff;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      position: relative;
+      align-items: center;
+      text-align: center;
+    }
+
+    h1 {
+      margin: 0;
+      text-shadow: 0px 0px 4px black;
+      align-items: center;
+    }
+
+    p {
+      margin: 0;
+      text-shadow: 0px 0px 4px black;
+      align-items: center;
+    }
+
+    div {
+      align-items: center;
+    }
+
+    /* Button styles */
+    .button-container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 999;
+      display: inline-block;
+    }
+
+    .button {
+      background-color: #fff;
+      color: #000;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .button:hover {
+      transform: translateX(20px);
+    }
+
+    /* Hide button on mobile devices */
+    @media only screen and (max-width: 480px) {
+      .button-container {
+        display: none;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div>
+    <h1>404 - Page Not Found</h1>
+    <p>Did you make a typo?</p>
+    <p>Try hitting the button and you'll get a reward.</p>
+  </div>
+
+  <div class="button-container">
+    <button class="button">Click Me</button>
+  </div>
+</body>
+</html>
+ge Not Found</title>
   <!-- Add custom CSS styles here -->
   <style>
     /* Add your custom styles for the error page */
