--- a/mc.html
+++ b/mc.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-<meta charset="utf-8" />
+<meta charset="utf-8" /><!DOCTYPE html>
+<html>
+<head>
+  <title>Music Player</title>
+</head>
+<body>
+  <h1>Music Player</h1>
+  <input type="text" id="musicLink" placeholder="Paste music link here">
+  <button onclick="playMusic()">Play</button>
+
+  <script>
+    function playMusic() {
+      var musicLink = document.getElementById("musicLink").value;
+      var iframe = document.createElement("iframe");
+      iframe.width = "300";
+      iframe.height = "80";
+      iframe.src = musicLink;
+      iframe.allow = "autoplay";
+      document.body.appendChild(iframe);
+    }
+  </script>
+</body>
+</html>
+
 <title>Mine:Craft Your Skin</title>
 <link rel="shortcut icon" type="image/png" href="i/favicon.png" />
 
