--- a/index.html
+++ b/index.html
@@ -35,14 +35,25 @@ body, html {height: 100%}
     <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
   </div>
-</div>
-<button onclick="playAudio()">Play MP3</button>
+  <div class="container">
+    <img id="trackImage" src="path/to/your/track-image.jpg" alt="Track Image Placeholder">
+    <br><br>
+    <button onclick="playAudio()">Play</button>
+    <button onclick="pauseAudio()">Pause</button>
+  </div>
   
   <script>
+    var audio = new Audio('audio/egyptian-trap.mp3');
+    
     function playAudio() {
-      var audio = new Audio('audio/egyptian-trap.mp3');
       audio.play();
     }
+    
+    function pauseAudio() {
+      audio.pause();
+    }
   </script>
+</div>
+
 </body>
 </html>
