--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@ body, html {height: 100%}
   background: rgb(0,0,0);
   background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(46,46,46,1) 100%, rgba(74,74,74,1) 100%);
   }
+
+  .container {
+      width: 300px;
+      padding: 20px;
+      border-radius: 10px;
+      background-color: #f2f2f2;
+    }
+    
+    #trackImage {
+      width: 100%;
+      max-height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
 </style>
 </head>
 <body>
