--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ body, html {height: 100%}
       width: 300px;
       padding: 20px;
       border-radius: 10px;
-      background-color: #f2f2f2;
+      border: 2px solid #808080;
+      background-color: transparent;
+      text-align: center;
     }
     
     #trackImage {
