--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@ body, html {height: 100%}
   </div>
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
     <div class="container">
-    <img id="trackImage" src="path/to/your/track-image.jpg" alt="Track Image Placeholder">
+    <img id="trackImage" src="https://media.discordapp.net/attachments/916425334021296139/1122651308495749241/Picsart_23-06-23_01-58-52-336.jpg?width=498&height=498" alt="Track Image Placeholder">
     <br><br>
     <button onclick="playAudio()">Play</button>
     <button onclick="pauseAudio()">Pause</button>
