--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body, html {height: 100%}
       Lykia
     </div>
     <div class="w3-display-middle">
-      <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
+      <h1 class="w3-jumbo w3-animate-top">LATEST</h1>
       <div class="container">
         <img id="trackImage" src="https://media.discordapp.net/attachments/916425334021296139/1122651308495749241/Picsart_23-06-23_01-58-52-336.jpg?width=498&height=498" alt="Track Image Placeholder">
         <br><br>
