--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body, html {height: 100%}
   min-height: 100%;
   background-position: center;
   background-size: cover;
-  position: relative;
+  position: absolute;
 }
   body {
   background: rgb(0,0,0);
