--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ body, html {height: 100%}
     
     function pauseAudio() {
       audio.pause();
+      audio2.pause();
     }
 
     var audio2 = new Audio('audio/brazil-funk-3.mp3');
@@ -83,6 +84,7 @@ body, html {height: 100%}
     }
     
     function pauseAudio2() {
+      audio.pause();
       audio2.pause();
     }
   </script>
