--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body, html {height: 100%}
   body {
   background: rgb(0,0,0);
   background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(46,46,46,1) 100%, rgba(74,74,74,1) 100%);
-    height: 100vh
+    height: 100%;
   }
 
   .container {
