--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ body, html {height: 100%}
   min-height: 100%;
   background-position: center;
   background-size: cover;
+  height: 100vh;
+      position: relative;
 }
   body {
   background: rgb(0,0,0);
