--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@ body, html {height: 100vh}
   background-size: cover;
   height: 100vh;
       position: relative;
+  margin: 0;
+      padding: 0;
 }
   body {
   background: rgb(0,0,0);
   background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(46,46,46,1) 100%, rgba(74,74,74,1) 100%);
   height: 100vh;
       position: relative;
+    margin: 0;
+      padding: 0;
   }
 
   .container {
