--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@ body, html {
       background-color: transparent;
       text-align: center;
     }
+
+  .button {
+    border-radius: 10px;
+      border: 2px solid #808080;
+      background-color: transparent;
+      text-align: center;
+    width: 50px;
+  }
     
     #trackImage {
       width: 100%;
