--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body, html {
       text-align: center;
     }
 
-  .button {
+  button {
     border-radius: 10px;
       border: 2px solid #808080;
       background-color: transparent;
