--- a/mailx.html
+++ b/mailx.html
@@ -3,45 +3,57 @@
 <head>
     <title>MailX</title>
     <style>
-      body {
-    background-color: #2d2d2d;
-    color: white;
-    font-family: Arial, sans-serif;
-}
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-.mail-container {
-    margin: auto;
-    width: 80%;
-    padding: 10px;
-}
+        body {
+            background: linear-gradient(45deg, #2d2d2d, #1c1c1c);
+            color: #FFF;
+            font-family: Arial, sans-serif;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
 
-header {
-    text-align: center;
-    padding: 20px;
-}
+        .mail-container {
+            background: rgba(0,0,0,0.6);
+            border-radius: 15px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.3);
+            width: 80%;
+            max-width: 1000px;
+            margin: auto;
+        }
 
-.mail-list {
-    background-color: #1c1c1c;
-    border-radius: 5px;
-    padding: 20px;
-}
+        header {
+            text-align: center;
+            padding: 20px;
+        }
 
-.mail-item {
-    border: 1px solid #444;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px 0;
-}
+        .mail-list {
+            padding: 20px;
+        }
 
-.mail-item h3 {
-    margin: 0;
-    color: #fff;
-}
+        .mail-item {
+            background: rgba(255,255,255,0.1);
+            border-radius: 15px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.3);
+            padding: 20px;
+            margin: 10px 0;
+        }
 
-.mail-item p {
-    color: #ccc;
-}
+        .mail-item h3 {
+            color: #fff;
+            font-size: 1.2em;
+            margin-bottom: 10px;
+        }
 
+        .mail-item p {
+            color: #ccc;
+        }
     </style>
 </head>
 <body>
