--- a/mailx.html
+++ b/mailx.html
@@ -83,6 +83,18 @@
                 <h3>Email Subject 2</h3>
                 <p>Email preview...</p>
             </div>
+            <div class="mail-item">
+                <h3>Email Subject 2</h3>
+                <p>Email preview...</p>
+            </div>
+            <div class="mail-item">
+                <h3>Email Subject 2</h3>
+                <p>Email preview...</p>
+            </div>
+            <div class="mail-item">
+                <h3>Email Subject 2</h3>
+                <p>Email preview...</p>
+            </div>
             <!-- Add more mail items as needed -->
         </div>
     </div>
