--- a/mailx.html
+++ b/mailx.html
@@ -13,10 +13,14 @@
             background: linear-gradient(45deg, #2d2d2d, #1c1c1c);
             color: #FFF;
             font-family: Arial, sans-serif;
-            height: 100vh;
+            min-height: 100vh;
+        }
+
+        .main {
             display: flex;
             align-items: center;
             justify-content: center;
+            padding: 20px;
         }
 
         .mail-container {
