--- a/mailx.html
+++ b/mailx.html
@@ -76,8 +76,8 @@
         <div class="mail-list">
             <h2>Inbox</h2>
             <div class="mail-item">
-                <h3>Email Subject 1</h3>
-                <p>Email preview...</p>
+                <h3>MailX</h3>
+                <p>Vielen Dank, dass sie unseren Service...</p>
             </div>
             <div class="mail-item">
                 <h3>Email Subject 2</h3>
