--- a/lobe.html
+++ b/lobe.html
@@ -20,6 +20,7 @@
             background: linear-gradient(303deg, #00ebff, #db00ff, #000000, #7a00fa);
             background-size: 800% 800%;
             animation: AnimationName 30s ease infinite;
+            z-index: 0;
         }
         @keyframes AnimationName {
             0%{background-position:0% 50%}
@@ -40,64 +41,40 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            z-index: 1;
         }
         h1 {
             margin-top: 0;
         }
-        #app {
-    background-color: #333; /* Dark grey background */
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.25); /* Add shadow */
-    padding: 20px;
-    position: relative;
-}
-
-/* Style for the "lobe" text */
-#lobe {
-    color: white;
-    font-size: 2em;
-    position: absolute;
-    top: 20px;
-    left: 20px;
-}
-
-/* Style for the "signup" button */
-#signup {
-    color: white;
-    background-color: #555; /* Slightly lighter grey for contrast */
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-}
-
-/* Placeholder image next to "lobe" without a background */
-#placeholder-image {
-    position: absolute;
-    top: 20px;
-    left: calc(20px + 4em + 10px); /* After "lobe" */
-    background-color: transparent;
-}
-
-/* Improve appearance of the text */
-.slide-title {
-    /* ... existing styles ... */
-    font-family: 'Nunito', sans-serif;
-    letter-spacing: 1px;
-}
+        .img-placeholder {
+            width: 100px;
+            height: 100px;
+            background-color: #ccc;
+            border-radius: 50%;
+            position: absolute;
+            top: 20px;
+            right: 20px;
+        }
+        .signup-btn {
+            background-color: green;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            color: white;
+            cursor: pointer;
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="css-selector"></div>
-    <div id="app" class="content">
-    <span id="lobe">lobe</span>
-    <img id="placeholder-image" src="path_to_your_image" alt="Placeholder" />
-    <button id="signup">Signup</button>
-    <!--... rest of the content ...-->
-</div>
-
+    <div class="container">
+        <h1>Lobe</h1>
+        <div class="img-placeholder"></div>
+        <p>Cool looking explanation text goes here. Discover more about Lobe and its awesome features.</p>
+        <button class="signup-btn">Sign Up For Beta</button>
     </div>
 </body>
 </html>
