--- a/lobe.html
+++ b/lobe.html
@@ -10,6 +10,7 @@
             padding: 0;
             font-family: Arial, sans-serif;
             overflow: hidden;
+            background-color: #333;
         }
         .css-selector {
             position: absolute;
@@ -31,29 +32,31 @@
             position: absolute;
             top: 10px;
             right: 10px;
-            bottom: 10px;
             left: 10px;
             background-color: grey;
             border-radius: 15px;
             padding: 20px;
             box-shadow: 0 5px 10px rgba(0,0,0,0.2);
             display: flex;
-            flex-direction: column;
-            justify-content: center;
+            flex-direction: row;
             align-items: center;
+            justify-content: space-between;
             z-index: 1;
         }
         h1 {
-            margin-top: 0;
+            margin: 0;
+            color: white;
+            font-size: 2em;
+        }
+        p {
+            color: white;
         }
         .img-placeholder {
             width: 100px;
             height: 100px;
-            background-color: #ccc;
+            background-color: transparent;
             border-radius: 50%;
-            position: absolute;
-            top: 20px;
-            right: 20px;
+            margin-right: 20px;
         }
         .signup-btn {
             background-color: green;
@@ -62,9 +65,6 @@
             border-radius: 5px;
             color: white;
             cursor: pointer;
-            position: absolute;
-            bottom: 20px;
-            right: 20px;
         }
     </style>
 </head>
