--- a/lobe.html
+++ b/lobe.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lobe</title>
+    <title>Cool Page</title>
     <style>
         body {
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
             overflow: hidden;
-            background-color: #333;
         }
         .css-selector {
             position: absolute;
@@ -21,7 +20,6 @@
             background: linear-gradient(303deg, #00ebff, #db00ff, #000000, #7a00fa);
             background-size: 800% 800%;
             animation: AnimationName 30s ease infinite;
-            z-index: 0;
         }
         @keyframes AnimationName {
             0%{background-position:0% 50%}
@@ -32,31 +30,31 @@
             position: absolute;
             top: 10px;
             right: 10px;
+            bottom: 10px;
             left: 10px;
-            background-color: grey;
+            background-color: #333; /* dark grey */
             border-radius: 15px;
             padding: 20px;
-            box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.5); /* added shadow */
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
+            justify-content: center;
             align-items: center;
-            justify-content: space-between;
-            z-index: 1;
+            position: relative;
         }
         h1 {
-            margin: 0;
-            color: white;
-            font-size: 2em;
-        }
-        p {
-            color: white;
+            position: absolute;
+            top: 20px;
+            left: 20px;
         }
         .img-placeholder {
             width: 100px;
             height: 100px;
-            background-color: transparent;
+            background-color: #ccc;
             border-radius: 50%;
-            margin-right: 20px;
+            position: absolute;
+            top: 20px;
+            left: 140px; /* positioned it next to "Lobe" */
         }
         .signup-btn {
             background-color: green;
@@ -65,6 +63,9 @@
             border-radius: 5px;
             color: white;
             cursor: pointer;
+            position: absolute;
+            top: 20px;
+            right: 20px;
         }
     </style>
 </head>
@@ -73,8 +74,8 @@
     <div class="container">
         <h1>Lobe</h1>
         <div class="img-placeholder"></div>
-        <p>Cool looking explanation text goes here. Discover more about Lobe and its awesome features.</p>
         <button class="signup-btn">Sign Up For Beta</button>
+        <p>Cool looking explanation text goes here. Discover more about Lobe and its awesome features.</p>
     </div>
 </body>
 </html>
