--- a/lobe.html
+++ b/lobe.html
@@ -27,46 +27,46 @@
             100%{background-position:0% 50%}
         }
         .container {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            bottom: 10px;
-            left: 10px;
-            background-color: #333; /* dark grey */
-            border-radius: 15px;
-            padding: 20px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.5); /* added shadow */
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-        }
-        h1 {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-        }
-        .img-placeholder {
-            width: 100px;
-            height: 100px;
-            background-color: #ccc;
-            border-radius: 50%;
-            position: absolute;
-            top: 20px;
-            left: 140px; /* positioned it next to "Lobe" */
-        }
-        .signup-btn {
-            background-color: green;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            color: white;
-            cursor: pointer;
-            position: absolute;
-            top: 20px;
-            right: 20px;
-        }
+        position: absolute;
+        top: 5px; /* Adjust this for the desired background visibility */
+        right: 5px; /* Adjust this for the desired background visibility */
+        bottom: 5px; /* Adjust this for the desired background visibility */
+        left: 5px; /* Adjust this for the desired background visibility */
+        background-color: #333;
+        border-radius: 15px;
+        padding: 20px;
+        box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+    }
+    h1 {
+        position: absolute;
+        top: 30px; /* adjusted for better positioning */
+        left: 30px; /* adjusted for better positioning */
+    }
+    .img-placeholder {
+        width: 100px;
+        height: 100px;
+        background-color: #ccc;
+        border-radius: 50%;
+        position: absolute;
+        top: 30px; /* adjusted for better positioning */
+        left: 160px; /* adjusted for better positioning */
+    }
+    .signup-btn {
+        background-color: green;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        color: white;
+        cursor: pointer;
+        position: absolute;
+        top: 30px; /* adjusted for better positioning */
+        right: 30px; /* adjusted for better positioning */
+    }
     </style>
 </head>
 <body>
