--- a/lobe.html
+++ b/lobe.html
@@ -32,7 +32,7 @@
         right: 15px; /* Adjust this for the desired background visibility */
         bottom: 15px; /* Adjust this for the desired background visibility */
         left: 15px; /* Adjust this for the desired background visibility */
-        background-color: #333;
+        background-color: #1a1a1a;
         border-radius: 15px;
         padding: 20px;
         box-shadow: 0 5px 15px rgba(0,0,0,0.5);
