--- a/lobe.html
+++ b/lobe.html
@@ -49,7 +49,8 @@
     .img-placeholder {
         width: 100px;
         height: 100px;
-        background-color: #ccc;
+        background: url('https://media.discordapp.net/attachments/916425334021296139/1150480328641761331/Picsart_23-09-10_18-19-58-003.png?width=468&height=468') no-repeat center center;
+    background-size: cover;
         border-radius: 50%;
         position: absolute;
         top: 30px; /* adjusted for better positioning */
