--- a/lobe.html
+++ b/lobe.html
@@ -42,13 +42,17 @@
         align-items: center;
     }
     h1 {
-        position: absolute;
-        top: 10px; /* adjusted for better positioning */
-        left: 10px; /* adjusted for better positioning */
-    }
-    .img-placeholder {
-        width: 50px;
-        height: 50px;
+            font-size: 2.5vw; /* Responsive font size */
+            position: absolute;
+            top: 15px;
+            left: 20px;
+            color: white; /* Enhancing the color */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Giving it a shadow for depth */
+        }
+
+        .img-placeholder {
+            width: 5vw; /* Responsive width */
+            height: 5vw; /* Responsive height */
         background: url('https://media.discordapp.net/attachments/916425334021296139/1150480328641761331/Picsart_23-09-10_18-19-58-003.png?width=468&height=468') no-repeat center center;
     background-size: cover;
         border-radius: 50%;
@@ -67,6 +71,13 @@
         top: 30px; /* adjusted for better positioning */
         right: 30px; /* adjusted for better positioning */
     }
+        p {
+            font-size: 1.5vw; /* Larger, responsive font size */
+            color: #e0e0e0; /* Lighter color for contrast against dark background */
+            text-align: center; /* Center-aligned text */
+            max-width: 80%; /* Limiting the width for readability */
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Giving it a shadow for depth */
+        }
     </style>
 </head>
 <body>
