--- a/lobe.html
+++ b/lobe.html
@@ -42,34 +42,36 @@
         align-items: center;
     }
     h1 {
-            font-size: 2.5vw; /* Responsive font size */
+            font-size: 2.5vw; 
             position: absolute;
-            top: 15px;
-            left: 20px;
+            top: 1vw;  /* Adjusted for responsiveness */
+            left: 1vw;  /* Adjusted for responsiveness */
             color: white; /* Enhancing the color */
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Giving it a shadow for depth */
         }
 
         .img-placeholder {
-            width: 5vw; /* Responsive width */
-            height: 5vw; /* Responsive height */
+            width: 5vw;
+            height: 5vw;
         background: url('https://media.discordapp.net/attachments/916425334021296139/1150480328641761331/Picsart_23-09-10_18-19-58-003.png?width=468&height=468') no-repeat center center;
     background-size: cover;
         border-radius: 50%;
         position: absolute;
-        top: 20px; /* adjusted for better positioning */
-        left: 100px; /* adjusted for better positioning */
+        top: 1vw;  /* Adjusted for responsiveness */
+            left: 10vw;  /* Adjusted for responsiveness */
     }
     .signup-btn {
         background-color: green;
-        padding: 10px 20px;
+        padding: 1vw 2vw;
         border: none;
         border-radius: 5px;
         color: white;
         cursor: pointer;
-        position: absolute;
-        top: 30px; /* adjusted for better positioning */
-        right: 30px; /* adjusted for better positioning */
+        font-size: 1.2vw; /* Responsive font size */
+             /* Responsive padding */
+            position: absolute;
+            top: 1vw;  /* Adjusted for responsiveness */
+            right: 1vw; /* adjusted for better positioning */
     }
         p {
             font-size: 1.5vw; /* Larger, responsive font size */
