--- a/lobe.html
+++ b/lobe.html
@@ -74,12 +74,19 @@
             right: 1vw; /* adjusted for better positioning */
     }
         p {
-            font-size: 1.5vw; /* Larger, responsive font size */
-            color: #e0e0e0; /* Lighter color for contrast against dark background */
-            text-align: center; /* Center-aligned text */
-            max-width: 80%; /* Limiting the width for readability */
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Giving it a shadow for depth */
-        }
+    font-size: 1.5vw; 
+    color: #333; /* Dark text for contrast */
+    text-align: left; 
+    max-width: 80%;
+    padding: 1.5vw; /* Padding for a "code block" feel */
+    background-color: #f5f5f5; /* Light background color for the "code block" */
+    border: 1px solid #ddd; /* A subtle border */
+    font-family: 'Courier New', Courier, monospace; /* Monospace font for code-like appearance */
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1); /* A subtle shadow for depth */
+    overflow-x: auto; /* Allows for horizontal scrolling if the content is too wide */
+}
+``
+
     </style>
 </head>
 <body>
