--- a/lobe.html
+++ b/lobe.html
@@ -73,18 +73,20 @@
             top: 1vw;  /* Adjusted for responsiveness */
             right: 1vw; /* adjusted for better positioning */
     }
-        p {
-    font-size: 1.5vw; 
-    color: #333; /* Dark text for contrast */
-    text-align: left; 
+       p {
+    font-size: 1.5vw;
+    color: #50fa7b; /* Adjusted color for better visibility on a black background */
+    text-align: left;
     max-width: 80%;
-    padding: 1.5vw; /* Padding for a "code block" feel */
-    background-color: black; /* Light background color for the "code block" */
-    border: 1px solid #ddd; /* A subtle border */
-    font-family: 'Courier New', Courier, monospace; /* Monospace font for code-like appearance */
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1); /* A subtle shadow for depth */
-    overflow-x: auto; /* Allows for horizontal scrolling if the content is too wide */
+    padding: 1.5vw;
+    background-color: black;
+    border: none; /* No border */
+    font-family: 'Courier New', Courier, monospace;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    overflow-x: auto;
+    border-radius: 10px; /* Rounded corners */
 }
+
    
 
     </style>
