--- a/lobe.html
+++ b/lobe.html
@@ -97,7 +97,7 @@
         <h1>Lobe</h1>
         <div class="img-placeholder"></div>
         <button class="signup-btn">Sign Up For Beta</button>
-        <p>test text</p>
+        <p>Lobe is an innovative artificial intelligence designed to supercharge your coding experience. Whether you're troubleshooting complex errors, seeking optimization advice, or simply learning a new language, Lobe's got your back. And here's some exciting news: by signing up for our beta, not only will you be at the forefront of AI-driven coding, but you'll also gain access to enhanced commands for Discord! Elevate your server interactions and bring the future of coding into your hands with Lobe.</p>
 </div>
 
     </div>
