--- a/lobebin.html
+++ b/lobebin.html
@@ -11,7 +11,8 @@
             font-family: 'Arial', sans-serif;
             background-color: #f0f0f0;
             color: #333;
-            margin: 0;
+            min-height: 100vh;
+    margin: 0;
             padding: 0;
         }
 
