--- a/lobebin.html
+++ b/lobebin.html
@@ -14,6 +14,9 @@
             min-height: 100vh;
     margin: 0;
             padding: 0;
+    box-sizing: border-box;
+            overflow-x: hidden;
+    overflow-y: auto;
         }
 
         .container {
