--- a/lobebin.html
+++ b/lobebin.html
@@ -7,6 +7,13 @@
     <title>LobeBin GitHub Data Viewer</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.css" rel="stylesheet" />
     <style>
+        * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+        
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f0f0f0;
@@ -14,7 +21,6 @@
             min-height: 100vh;
     margin: 0;
             padding: 0;
-    box-sizing: border-box;
             overflow-x: hidden;
     overflow-y: auto;
         }
