--- a/lobebin.html
+++ b/lobebin.html
@@ -7,6 +7,12 @@
     <title>LobeBin GitHub Data Viewer</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.css" rel="stylesheet" />
     <style>
+
+        html, body {
+    height: 100%;
+    overflow: hidden;
+}
+
         * {
     margin: 0;
     padding: 0;
