--- a/lobebin.html
+++ b/lobebin.html
@@ -34,9 +34,12 @@
         .search-container {
             max-width: 800px;
             margin: 2% auto;
-            padding: 10px;
+            padding: 20px;
+            border-radius: 15px;
+            border: 1px solid #718096;
             display: flex;
             justify-content: center;
+            transition: background-color 0.3s;
         }
 
         #searchBar {
