--- a/lobebin.html
+++ b/lobebin.html
@@ -48,6 +48,7 @@
             border-radius: 15px;
             border: 1px solid #718096;
             outline: none;
+            background-color: #FFFFFF00;
         }
 
         .entry {
