--- a/lobebin.html
+++ b/lobebin.html
@@ -49,6 +49,7 @@
             border-radius: 15px;
             border: 1px solid #718096;
             outline: none;
+            color: #A0AEC0;
             background-color: #FFFFFF00;
         }
 
