--- a/lobebin.html
+++ b/lobebin.html
@@ -39,7 +39,7 @@
             border: 1px solid #718096;
             display: flex;
             justify-content: center;
-            background-color: #4A5568;
+            background-color: #2D3748;
             transition: background-color 0.3s;
         }
 
