--- a/lobebin.html
+++ b/lobebin.html
@@ -50,9 +50,12 @@
             border: 1px solid #718096;
             outline: none;
             color: #A0AEC0;
-            background-color: #FFFFFF00;
+            background-color: #4A5568;
         }
-
+.searchBar:hover {
+            cursor: pointer;
+            background-color: #2C3E50; /* On hover, darken a bit */
+        }
         .entry {
             background-color: #4A5568; /* Slightly lighter than the container for contrast */
             margin: 20px 0;
