--- a/lobebin.html
+++ b/lobebin.html
@@ -113,7 +113,7 @@
 
 <body class="gradient-background">
     <div class="search-container">
-        <input type="text" id="searchBar" placeholder="Search by title...">
+        <input class="searchBar" type="text" id="searchBar" placeholder="Search by title...">
     </div>
     <div class="container" id="dataContainer"></div>
 
