--- a/lobebin.html
+++ b/lobebin.html
@@ -42,7 +42,7 @@
             transition: background-color 0.3s;
         }
 
-        #searchBar {
+        .searchBar {
             padding: 10px;
             width: 80%;
             border-radius: 15px;
