--- a/lobebin.html
+++ b/lobebin.html
@@ -46,7 +46,7 @@
             padding: 10px;
             width: 80%;
             border-radius: 15px;
-            
+            transition: background-color 0.3s;
             border: 1px solid #718096;
             outline: none;
             color: #A0AEC0;
