--- a/lobebin.html
+++ b/lobebin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LobeBin GitHub Data Viewer</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
     <style>
         html, body {
@@ -114,7 +115,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #2D3748; /* Dark Background */
+    background-color: #2D2D2D; /* Dark Background */
     padding: 10px 5%;
     border-bottom: 1px solid #718096;
 }
@@ -187,7 +188,7 @@
 
     <!-- Navbar -->
     <div class="navbar">
-        <div class="nav-logo">Lobe</div>
+        <div class="nav-logo">lobe</div>
         <div class="nav-items">
             <div class="nav-item" onclick="window.location.href='https://strich.org'">Home</div>
             <div class="nav-item" onclick="window.location.href='https://strich.org/status'">Status</div>
